Fixed "textarea#review" due to too wide display in reviews.
git-svn-id: https://xtcmodified.svn.sourceforge.net/svnroot/xtcmodified/trunk@259 25741c12-d480-4641-b65d-acd752be3b7f

--- a/templates/xtc5/stylesheet.css
+++ b/templates/xtc5/stylesheet.css
@@ -929,7 +929,7 @@ table.reviewlist tr.contentrow2 td {
 	background-color:#f8f8f8;
 }
 textarea#review {
-	width:100%
+	width:95%
 }
 /* MEDIA LIST */
 table.medialist {
